force-app/commons/default/objects/Log__c/fields/DeviceInfo__c.field-meta.xml
<CustomField>
    <fullName>DeviceInfo__c</fullName>
    <label>Device Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>