force-app/commons/default/objects/Log__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>