force-app/commons/default/objects/Log__c/fields/IpAddress__c.field-meta.xml
<CustomField>
    <fullName>IpAddress__c</fullName>
    <label>IP Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>