force-app/commons/default/objects/Log__c/fields/LogId__c.field-meta.xml
<CustomField>
    <fullName>LogId__c</fullName>
    <label>Log Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>