force-app/commons/default/objects/Log__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>